--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,9 @@ coverage
 .grunt
 
 # Compiled Dirs (http://nodejs.org/api/addons.html)
+node_modules/
 build/
-dist/
+bundle.js
 
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
