--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "body-parser": "^1.17.1",
     "cors": "^2.8.1",
     "express": "^4.15.2",
+    "mysql": "^2.13.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.0.0",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "sequelize": "^3.30.2"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
