--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.15.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-router-dom": "^4.0.0",
     "request": "^2.81.0"
   },
   "devDependencies": {
