--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "mysql": "^2.13.0",
+    "express-fileupload": "^0.1.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.0.0",
