--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-fileupload": "^0.1.2",
     "express-session": "^1.15.1",
     "jquery": "^3.2.1",
+    "google-cloud": "^0.49.0",
     "morgan": "^1.8.1",
     "mysql": "^2.13.0",
     "passport": "^0.3.2",
