--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
   },
   "dependencies": {
     "body-parser": "^1.17.1",
-    "cors": "^2.8.1",
+    "cloudinary": "^1.8.0",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.1",
     "express": "^4.15.2",
+    "express-fileupload": "^0.1.2",
     "express-session": "^1.15.1",
     "morgan": "^1.8.1",
+    "mysql": "^2.13.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
-    "mysql": "^2.13.0",
-    "express-fileupload": "^0.1.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.0.0",
