--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.15.2",
     "express-fileupload": "^0.1.2",
     "express-session": "^1.15.1",
+    "jquery": "^3.2.1",
     "morgan": "^1.8.1",
     "mysql": "^2.13.0",
     "passport": "^0.3.2",
