added bluebird promisifyall to db query

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "nodemon server/index.js"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "cloudinary": "^1.8.0",
     "cookie-parser": "^1.4.3",
