--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.0.0",
     "request": "^2.81.0",
-    "sequelize": "^3.30.2",
+    "sequelize": "^3.30.2"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
