--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "babel-cli": "^6.7.5",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.23.0",
     "babel-register": "^6.7.2",
