Finished Itemization on Receipt upload (Not writing into DB yet)

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ node_modules/
 build/
 env/
 bundle.js
+temp/
+api/testResults/
 
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
