Revise npm start and add Procfile

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "node": ">=6.4.0"
   },
   "scripts": {
-    "webpack": "webpack -d --watch",
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js & webpack -d --watch"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
