--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-preset-react": "^6.23.0",
     "babel-register": "^6.7.2",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "nodemon": "^1.11.0",
     "webpack": "^2.2.1"
   },
   "babel": {
