--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.0.0",
     "request": "^2.81.0",
-    "sequelize": "^3.30.2"
-  },
-  "devDependencies": {
+    "sequelize": "^3.30.2",
     "babel-cli": "^6.7.5",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.0",
@@ -42,7 +40,10 @@
     "babel-preset-react": "^6.23.0",
     "babel-register": "^6.7.2",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "nodemon": "^1.11.0",
     "webpack": "^2.2.1"
+  },
+  "devDependencies": {
   },
   "babel": {
     "presets": [
