remove/comment out console.log & add bundle.js to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ env/
 temp/
 api/testResults/
 .env
+bundle.js
 
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
