--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": ">=6.4.0"
   },
   "scripts": {
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js",
+    "webpack": "webpack -d --watch"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
